--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -47,7 +47,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     border-bottom: 1px #efefef solid;
-    padding: 2em 0 2em 0;
+    padding: 0.5em 0 0.5em 0;
     
 
     .paper-box-image{
@@ -57,7 +57,7 @@
         order: 2;
         img {
             max-width: 400px;
-            box-shadow: 3px 3px 6px #888;
+            box-shadow: 1px 3px 6px #888;
             object-fit: cover;
         }
     }
@@ -77,7 +77,8 @@
         
         .paper-box-text{
             justify-content: left;
-            padding-left: 2em;
+            text-align: justify; /* 文字两端对齐 */
+            padding-left: 1em;
             max-width: 60%;
             order: 2;
         }
@@ -98,12 +99,22 @@ h1:before, .anchor:before {
 }
 
 .badge {
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding-left: 0.2rem;
+    padding-right: 0.2rem;
     position: absolute;
-    margin-top: .5em;
+    margin-top: .0em;
     margin-left: -.5em;
     color: white;
     background-color: #00369f;
     font-size: .8em;
+}
+
+@media (min-width: 57.8125em) {
+    .page {
+        // width:83.0508474576%;
+        float: right;
+        margin-right: 0;
+        padding-left: 0;
+        padding-right: 0%
+    }
 }
